# tiny-notion-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_core.py
tiny_notion_mcp/: __init__.py  core.py  server.py
