[project]
name = "tiny-notion-mcp"
version = "0.1.0"
description = "Lightweight Notion MCP server that minimizes token usage"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "notion-client>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
tiny-notion-mcp = "tiny_notion_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"